change wildfly-container for arquillian-tests from embedded to managed (with 'allowConnectingToRunningServer'); add arquillian-jacoco-extension