@@ -46,15 +46,14 @@
         <version.gson>2.4</version.gson>
         <!-- test -->
         <version.junit>4.11</version.junit>
-        <version.arquillian-bom>1.1.10.Final</version.arquillian-bom>
-        <version.weld-core>2.2.3.Final</version.weld-core>
-        <version.weld-core-impl>2.2.2.Final</version.weld-core-impl>
+        <version.arquillian-bom>1.1.9.Final</version.arquillian-bom>
         <version.slf4j-simple>1.6.4</version.slf4j-simple>
-        <version.arquillian-weld-ee-embedded-1.1>1.0.0.CR3</version.arquillian-weld-ee-embedded-1.1>
-        <version.arquillian-wildfly-embedded>8.2.1.Final</version.arquillian-wildfly-embedded>
+        <version.arquillian-wildfly-managed>1.1.0.Alpha1</version.arquillian-wildfly-managed>
         <version.wildfly-dist>9.0.2.Final</version.wildfly-dist>
         <version.arquillian-suite-extension>1.1.2</version.arquillian-suite-extension>
         <version.arquillian-osgi>2.1.0.Final</version.arquillian-osgi>
+        <version.arquillian-jacoco>1.0.0.Alpha8</version.arquillian-jacoco>
+        <version.jacoco>0.7.5.201505241946</version.jacoco>
         <version.javassist>3.18.2-GA</version.javassist>
     </properties>
 
@@ -169,31 +168,6 @@
                 <version>${version.junit}</version>
                 <scope>test</scope>
             </dependency>
-            <dependency>
-                <groupId>org.jboss.arquillian</groupId>
-                <artifactId>arquillian-bom</artifactId>
-                <version>${version.arquillian-bom}</version>
-                <scope>import</scope>
-                <type>pom</type>
-            </dependency>
-            <dependency>
-                <groupId>org.eu.ingwar.tools</groupId>
-                <artifactId>arquillian-suite-extension</artifactId>
-                <version>${version.arquillian-suite-extension}</version>
-                <scope>test</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.slf4j</groupId>
-                <artifactId>slf4j-simple</artifactId>
-                <version>${version.slf4j-simple}</version>
-                <scope>test</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.javassist</groupId>
-                <artifactId>javassist</artifactId>
-                <version>${version.javassist}</version>
-                <scope>test</scope>
-            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -211,11 +185,6 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.jboss.arquillian.junit</groupId>
-            <artifactId>arquillian-junit-container</artifactId>
-            <scope>test</scope>
         </dependency>
     </dependencies>
 
@@ -264,14 +233,6 @@
                         <!-- https://docs.jboss.org/author/display/ARQ/WildFly+8.1.0+-+Embedded -->
                         <configuration>
                             <forkMode>once</forkMode>
-                            <systemPropertyVariables>
-                                <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
-                                <jboss.home>${project.basedir}/target/wildfly-9.0.2.Final</jboss.home>
-                                <module.path>${project.basedir}/target/wildfly-9.0.2.Final/modules</module.path>
-                            </systemPropertyVariables>
-                            <!--suppress MavenModelInspection --> <!-- we need ${argLine} becauase there are some jacoco-arguments already set -->
-                            <argLine>${argLine} -Xverify:none -XX:+UseParallelGC -Xmx1024M -XX:MaxPermSize=256m -Djava.net.preferIPv4Stack=true -Djboss.socket.binding.port-offset=100</argLine>
-                            <redirectTestOutputToFile>false</redirectTestOutputToFile>
                         </configuration>
                     </plugin>
 
@@ -279,10 +240,18 @@
             </build>
             <dependencyManagement>
                 <dependencies>
+                    <!-- arquillian & extensions -->
                     <dependency>
-                        <groupId>org.wildfly</groupId>
-                        <artifactId>wildfly-arquillian-container-embedded</artifactId>
-                        <version>${version.arquillian-wildfly-embedded}</version>
+                        <groupId>org.jboss.arquillian</groupId>
+                        <artifactId>arquillian-bom</artifactId>
+                        <version>${version.arquillian-bom}</version>
+                        <scope>import</scope>
+                        <type>pom</type>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.wildfly.arquillian</groupId>
+                        <artifactId>wildfly-arquillian-container-managed</artifactId>
+                        <version>${version.arquillian-wildfly-managed}</version>
                         <scope>test</scope>
                     </dependency>
                     <dependency>
@@ -292,16 +261,46 @@
                         <scope>test</scope>
                     </dependency>
                     <dependency>
-                        <groupId>org.wildfly</groupId>
-                        <artifactId>wildfly-embedded</artifactId>
-                        <version>${version.wildfly-dist}</version>
+                        <groupId>org.jboss.arquillian.extension</groupId>
+                        <artifactId>arquillian-jacoco</artifactId>
+                        <version>${version.arquillian-jacoco}</version>
+                        <scope>test</scope>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.jacoco</groupId>
+                        <artifactId>org.jacoco.core</artifactId>
+                        <version>${version.jacoco}</version>
+                        <scope>test</scope>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.eu.ingwar.tools</groupId>
+                        <artifactId>arquillian-suite-extension</artifactId>
+                        <version>${version.arquillian-suite-extension}</version>
+                        <scope>test</scope>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.slf4j</groupId>
+                        <artifactId>slf4j-simple</artifactId>
+                        <version>${version.slf4j-simple}</version>
+                        <scope>test</scope>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.javassist</groupId>
+                        <artifactId>javassist</artifactId>
+                        <version>${version.javassist}</version>
+                        <scope>test</scope>
                     </dependency>
                 </dependencies>
             </dependencyManagement>
             <dependencies>
                 <dependency>
-                    <groupId>org.wildfly</groupId>
-                    <artifactId>wildfly-arquillian-container-embedded</artifactId>
+                    <groupId>org.jboss.arquillian.junit</groupId>
+                    <artifactId>arquillian-junit-container</artifactId>
+                    <scope>test</scope>
+                </dependency>
+                <dependency>
+                    <groupId>org.wildfly.arquillian</groupId>
+                    <artifactId>wildfly-arquillian-container-managed</artifactId>
                     <scope>test</scope>
                 </dependency>
                 <dependency>
@@ -310,8 +309,13 @@
                     <scope>test</scope>
                 </dependency>
                 <dependency>
-                    <groupId>org.wildfly</groupId>
-                    <artifactId>wildfly-embedded</artifactId>
+                    <groupId>org.jboss.arquillian.extension</groupId>
+                    <artifactId>arquillian-jacoco</artifactId>
+                    <scope>test</scope>
+                </dependency>
+                <dependency>
+                    <groupId>org.jacoco</groupId>
+                    <artifactId>org.jacoco.core</artifactId>
                     <scope>test</scope>
                 </dependency>
                 <dependency>
